fix content alignment

--- a/_sass/_bootstrap_customization.scss
+++ b/_sass/_bootstrap_customization.scss
@@ -20,8 +20,8 @@
 .navbar {
   font-weight: 900;
   height: 40px;
-  padding-left:0px;
-  padding-right:0px;
+  padding-left:3rem;
+  padding-right:3rem;
   color: #66ff99;
   background-color: white;
   border-bottom: 1px solid #373737;
@@ -37,10 +37,8 @@
 .body-text {
     background-color: black;
     color: #DCDCDC;
-    // padding-left:30px;
-    // padding-right:30px;
-    padding-left:3em;
-    padding-right:3em;
+    padding-left:4em;
+    padding-right:4em;
 }
 
 body {
